Huuge update building in all features of the MWEs paper. Much more to come with data for other languages.

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -3,6 +3,4 @@ include LICENSE
 include README.md
 
 # Include the data files
-recursive-include partitioner/qdumps *
-recursive-include partitioner/dictionaries *
-
+recursive-include partitioner/data *
